--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.2.1",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
